tests/failure/trait_with_only_lifetime.stderr
error: symmetric trait must contain at least 1 type argument
  --> $DIR/trait_with_only_lifetime.rs:12:11
   |
12 | impl<'a> T<'a> for A {
   |           ^
